# timo_pruesse_wasm_terminal

./: .gitignore  Cargo.toml  README.md
src/: command.rs  lib.rs  parser.rs
src/commands/: cat.rs  echo.rs  ls.rs  mod.rs  timo.rs  timo_get_contact.rs  timo_get_github.rs  timo_get_instagram.rs  timo_get_twitter.rs  timo_help.rs  timo_stack.rs  timo_system.rs  timo_version.rs  whoami.rs
src/utils/: version.rs
tests/: command.rs  lib.rs  parser.rs
tests/commands/: cat.rs  echo.rs  ls.rs  main.rs  timo.rs  whoami.rs
tests/utils/: version.rs
