[package]
name = "timo_pruesse_wasm_terminal"
version = "0.2.1"
edition = "2021"
description = "A \"terminal interpreter\" for the commands that you can run on timo-pruesse.de"
repository = "https://github.com/Chroma91/timo_pruesse_wasm_terminal"
license = "MIT"
authors = ["Timo Prüße <chroma91@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
chrono = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
regex = "1"

[profile.release]
lto = true
