[package]
name = "timo_pruesse_wasm_terminal"
version = "1.3.7"
edition = "2021"
description = "A \"terminal interpreter\" for the commands that you can run on timo-pruesse.de"
repository = "https://github.com/Chroma91/timo_pruesse_wasm_terminal"
license = "MIT"
authors = ["Timo Prüße <chroma91@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
chrono = { version = "0.4", features = ["wasmbind"] }
typed-html = { git = "https://github.com/bodil/typed-html", rev = "e18d328951b6b9216976d180f3dea2e6600a3982" }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
regex = "1"

[profile.release]
lto = true
